Align grid correctly and add gradient to title

--- a/style.css
+++ b/style.css
@@ -3,6 +3,13 @@
     --rotateSpeed: 30s;
     --bounceSpeed: 1.5s;
     
+    
+}
+* {
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body {
@@ -512,7 +519,7 @@ body {
 }
 .top-section__grid {
     display:grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 50vw 50vw;
     height:100vh;
     width:99vw;
 }
@@ -520,9 +527,60 @@ body {
 .top-section__right {
     border:2px solid red;
     height:100%;
-    width:100%;
+    width:50vw;
 }
 .top-section__left {
     display:flex;
     flex-direction: column;
+    width:50vw;
+}
+.portfolio-home__introduction {
+    display:flex;
+    flex-direction: column;
+    width:50vw;
+    padding:2rem;;
+}
+.portfolio-home__left-buttons {
+    align-self:flex-end;
+    gap:0.5rem;
+    display:flex;
+    width:50vw;
+}
+.top-section__left {
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    gap:1rem;
+    align-items: flex-start;
+    width:50vw;
+    
+    
+   
+ }
+ 
+ 
+ .top-section__left h1 {
+   font-weight: 800;
+   outline: none;
+   text-transform: uppercase;
+   background: linear-gradient(135deg, #5335cf 0%, #de005e 25%, #f66e48 50%, #de005e 75%, #5335cf 100%);
+   background-size: 400%;
+   -webkit-background-clip: text;
+   -webkit-text-fill-color: transparent; 
+   animation: animate 10s linear infinite;
+   width:max-content;
+   font-size:4.5vw;
+   
+ }
+ .top-section__left h4 {
+    color:white;
+    font-family:monospace;
+    font-size:1rem;
+    font-weight:500;
+    color:lightblue;
+}
+.top-section__left h3 {
+    color:lightblue;
+    align-self:flex-end;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
